# MiniKV

./: CMakeLists.txt  README.md
docker/: Dockerfile
include/: api_handler.h  engine.h  http_server.h  parser.h  storage.h  string_utils.h
src/: api_handler.c  engine.c  http_server.c  main.c  parser.c  storage.c  string_utils.c
test/: test_url.sh
